--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -11,6 +11,9 @@
   --lightFont: #FFF;
   --darkFont: var(--darkBackground);
   --borderRadius: 1rem;
+
+  --modalWidth: 35vw;
+  --modalPadding: 2rem;
 }
 
 a {
@@ -77,6 +80,7 @@ main {
   bottom: 0;
   left: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: var(--darkBackground);
@@ -87,19 +91,24 @@ main {
   visibility: visible;
   opacity: 0.9;
   z-index: 2;
+  background-color: var(--darkBackground)
+}
+
+.modal__header {
+  width: var(--modalWidth);
+  padding: calc(var(--modalPadding)/3);
 }
 
 .modal__content {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
-  width: calc(25vw);
+  padding: var(--modalPadding);
+  width: var(--modalWidth);
   min-width: max-content;
   gap: 1rem;
-  background-color: var(--darkBackground);
 }
 
-.sound-options>.option{
+.sound-options>.option {
   display: flex;
   justify-content: space-between;
 }
@@ -144,8 +153,30 @@ main {
 
 #settings-modal {}
 
+
+/* Rooms Modal */
+#rooms {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  /* background-color: purple; */
+}
+
+.room{
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  /* background-color: blue; */
+}
+
+.room-info{
+  display: flex;
+  gap: 1rem;
+}
+
+
 /* snackbar */
-.snackbar{
+.snackbar {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -159,7 +190,7 @@ main {
   transition: all 300ms;
 }
 
-.snackbar.visible{
+.snackbar.visible {
   visibility: visible;
   opacity: 1;
   top: 10vh;
